cmake_minimum_required(VERSION 3.4)
project(ConceptualExample)
set(CMAKE_CXX_STANDART 11)
set(CMAKE_CXX_STANDART_REQUIRED ON)
option(BUILD_TESTS "Build tests" OFF)

if(BUILD_TESTS)                   
  add_compile_options(--coverage) 
endif()

add_library(ConceptualExample STATIC ${CMAKE_CURRENT_SOURCE_DIR}/ConceptualExample.cpp)
target_link_libraries(ConceptualExample gcov)

if(BUILD_TESTS)
  enable_testing()
  add_subdirectory(third-party/gtest)
  file(GLOB ConceptualExample_TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp)
  add_executable(check ${ConceptualExample_TEST_SOURCES})
  target_link_libraries(check ConceptualExample gtest_main)
  add_test(NAME check COMMAND check)
endif()
